# catkin_virtualenv

./: .travis.yml  Jenkinsfile  README.md  techstack.md  techstack.yml
.github/workflows/: main.yml
catkin_virtualenv/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  requirements.in  requirements.txt  setup.py
catkin_virtualenv/cmake/: build_venv.py  catkin_generate_virtualenv.cmake  catkin_install_python.cmake  catkin_virtualenv-extras.cmake.develspace.in  catkin_virtualenv-extras.cmake.em  catkin_virtualenv-extras.cmake.installspace.in  combine_requirements.py  common_requirements.txt  glob_requirements.py  python3_requirements.txt
catkin_virtualenv/cmake/templates/: - script to glob_requirements, including  program.devel.in  program.develspace.in  program.install.in  program.installspace.in
catkin_virtualenv/scripts/: build_venv  collect_requirements  combine_requirements  glob_requirements  venv_check  venv_freeze  venv_init  venv_install  venv_lock  venv_relocate  venv_sync
catkin_virtualenv/src/catkin_virtualenv/: __init__.py  cli.py  collect_requirements.py  relocate.py  requirements.py  uvvenv.py  venv.py
catkin_virtualenv/src/catkin_virtualenv/dh_virtualenv/: deployment.py
catkin_virtualenv/src/dh_virtualenv/: deployment.py
catkin_virtualenv/test/: test_catkin_uvvirtualenv.py  test_cli.py  test_requirements.py
catkin_virtualenv/test/testdata/: diff-requirements.txt  ota-bad-requirements.txt  ota-good-requirements.txt  ota-requirements.in  requirements.txt
test_catkin_virtualenv/: CHANGELOG.rst  CMakeLists.txt  package.xml  requirements.in  requirements.txt
test_catkin_virtualenv/test/: test_requirements.py  test_virtualenv_library.py  test_virtualenv_script  test_virtualenv_script.test  virtualenv_script.test
test_catkin_virtualenv_distro_codename/: CMakeLists.txt  package.xml  requirements-jammy.txt  requirements-noble.txt  requirements.in  requirements.txt
test_catkin_virtualenv_distro_codename/test/: test_distro_requirements.py  test_virtualenv_script
test_catkin_virtualenv_inherit/: CMakeLists.txt  package.xml
test_catkin_virtualenv_inherit/test/: test_virtualenv_library.py  test_virtualenv_script
test_catkin_virtualenv_inherited/: CHANGELOG.rst  CMakeLists.txt  package.xml  requirements.in  requirements.txt
test_catkin_virtualenv_inherited/test/: test_inherited_distro_requirements.py  test_virtualenv_library.py  test_virtualenv_script
test_catkin_virtualenv_isolated/: CHANGELOG.rst  CMakeLists.txt  package.xml
test_catkin_virtualenv_isolated/test/: test_virtualenv_library.py  test_virtualenv_script  virtualenv_script.test
test_catkin_virtualenv_py3/: CHANGELOG.rst  CMakeLists.txt  package.xml  requirements.in  requirements.txt
test_catkin_virtualenv_py3/test/: test_virtualenv_library.py  test_virtualenv_script  test_virtualenv_script.test  virtualenv_script.test
test_catkin_virtualenv_py3_isolated/: CHANGELOG.rst  CMakeLists.txt  package.xml  requirements.txt
test_catkin_virtualenv_py3_isolated/test/: test_virtualenv_library.py  test_virtualenv_script
test_catkin_virtualenv_python2/: CHANGELOG.rst  CMakeLists.txt  package.xml
test_catkin_virtualenv_python2/test/: test_virtualenv_script  virtualenv_script.test
test_catkin_virtualenv_uv/: CHANGELOG.rst  CMakeLists.txt  log  package.xml  requirements.txt  test-log
test_catkin_virtualenv_uv/test/: test_virtualenv_library.py  test_virtualenv_script_uv  virtualenv_script.test
tests/: README.md
tests/test_catkin_virtualenv/: CHANGELOG.rst  CMakeLists.txt  package.xml  requirements.txt
tests/test_catkin_virtualenv/test/: test_virtualenv_library.py  test_virtualenv_script
tests/test_catkin_virtualenv_distro_codename/: CHANGELOG.rst
tests/test_catkin_virtualenv_distro_codename/test/: test_virtualenv_script  virtualenv_script.test
tests/test_catkin_virtualenv_inherited/: package.xml
tests/test_catkin_virtualenv_inherited/test/: test_virtualenv_script  virtualenv_script.test
tests/test_catkin_virtualenv_isolated/: CHANGELOG.rst  CMakeLists.txt  package.xml
tests/test_catkin_virtualenv_isolated/test/: test_virtualenv_library.py  test_virtualenv_script
tests/test_catkin_virtualenv_no_system_packages/: CHANGELOG.rst  CMakeLists.txt  package.xml
tests/test_catkin_virtualenv_no_system_packages/test/: test_virtualenv_library.py  test_virtualenv_script  virtualenv_script.test
