<?xml version="1.0"?>
<package format="2">
  <name>catkin_virtualenv</name>
  <version>0.0.0</version>
  <description>Bundle a virtualenv with a catkin package.</description>
  <license>GPL</license>

  <author email="pbovbel@locusrobotics.com">Paul Bovbel</author>
  <maintainer email="pbovbel@locusrobotics.com">Paul Bovbel</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_export_depend>python-enum34</build_export_depend>
  <build_export_depend>python-pip</build_export_depend>
  <build_export_depend>python-semver</build_export_depend>
  <build_export_depend>python-virtualenv</build_export_depend>

  <depend>rospy</depend>

  <test_depend>roslint</test_depend>

</package>
