<?xml version="1.0"?>
<!--
Software License Agreement (GPL)

\file      package.xml
\authors   Paul Bovbel <pbovbel@locusrobotics.com>
\copyright Copyright (c) (2017,), Locus Robotics, All rights reserved.

This program is free software: you can redistribute it and/or
modify it under the terms of the GNU General Public License as
published by the Free Software Foundation, either version 2 of the
License, or (at your option) any later version.

This program is distributed in the hope that it will be useful, but
WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program. If not, see <http://www.gnu.org/licenses/>.
-->
<package format="2">
  <name>catkin_virtualenv</name>
  <version>0.1.3</version>
  <description>Bundle a virtualenv with a catkin package.</description>
  <license>GPL</license>

  <author email="pbovbel@locusrobotics.com">Paul Bovbel</author>
  <maintainer email="pbovbel@locusrobotics.com">Paul Bovbel</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_export_depend>python-enum34</build_export_depend>
  <build_export_depend>python-virtualenv</build_export_depend>
  <build_export_depend>python3-dev</build_export_depend>

  <test_depend>roslint</test_depend>

</package>
