<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
Software License Agreement (GPL)

\file      package.xml
\authors   Paul Bovbel <pbovbel@locusrobotics.com>
\copyright Copyright (c) (2017,), Locus Robotics, All rights reserved.

This program is free software: you can redistribute it and/or
modify it under the terms of the GNU General Public License as
published by the Free Software Foundation, either version 2 of the
License, or (at your option) any later version.

This program is distributed in the hope that it will be useful, but
WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program. If not, see <http://www.gnu.org/licenses/>.
-->
<package format="3">
  <name>catkin_virtualenv</name>
  <version>0.9.0</version>
  <description>Bundle python requirements in a catkin package via virtualenv.</description>

  <maintainer email="pbovbel@locusrobotics.com">Paul Bovbel</maintainer>
  <license>GPL</license>
  <author email="pbovbel@locusrobotics.com">Paul Bovbel</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python3-setuptools</buildtool_depend>

  <build_export_depend>python3-dev</build_export_depend>
  <build_export_depend>python3-nose</build_export_depend>
  <build_export_depend>python3-rospkg-modules</build_export_depend>
  <build_export_depend>python3-venv</build_export_depend>
  <build_export_depend>rosbash</build_export_depend>
  <build_export_depend>rosgraph</build_export_depend>
  <build_export_depend>virtualenv</build_export_depend>

  <test_depend>roslint</test_depend>

  <export>
    <pip_requirements>requirements.txt</pip_requirements>
  </export>

</package>
