<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
Software License Agreement (GPL)

\file      package.xml
\authors   Paul Bovbel <pbovbel@locusrobotics.com>
\copyright Copyright (c) (2017,), Locus Robotics, All rights reserved.

This program is free software: you can redistribute it and/or
modify it under the terms of the GNU General Public License as
published by the Free Software Foundation, either version 2 of the
License, or (at your option) any later version.

This program is distributed in the hope that it will be useful, but
WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program. If not, see <http://www.gnu.org/licenses/>.
-->
<package format="2">
  <name>test_catkin_virtualenv_py3_isolated</name>
  <version>0.4.1</version>
  <description>Package to test catkin_virtualenv in Python 3.</description>

  <maintainer email="pbovbel@locusrobotics.com">Paul Bovbel</maintainer>
  <license>GPL</license>
  <author email="pbovbel@locusrobotics.com">Paul Bovbel</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>catkin_virtualenv</build_depend>

  <test_depend>python3-nose</test_depend>
  <test_depend>rostest</test_depend>

  <export>
    <pip_requirements>requirements.txt</pip_requirements>
  </export>

</package>
